--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 
 services:
+
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
     environment:
@@ -15,14 +16,14 @@ services:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
       - "9092:9092"
-      - "9093:9093"
 
   connect:
     image: debezium/connect:2.1
@@ -31,7 +32,7 @@ services:
     ports:
       - "8083:8083"
     environment:
-      BOOTSTRAP_SERVERS: 'kafka:9092'
+      BOOTSTRAP_SERVERS: kafka:9092
       GROUP_ID: 1
       CONFIG_STORAGE_TOPIC: my_connect_configs
       OFFSET_STORAGE_TOPIC: my_connect_offsets
@@ -42,7 +43,7 @@ services:
       VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
       PLUGIN_PATH: /kafka/connect
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./plugins:/kafka/connect
 
   backend:
     build: ./backend
@@ -50,13 +51,13 @@ services:
     depends_on:
       - kafka
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://${DB_HOST}:5432/employee_db
-      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
-      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
-      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
-      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      SPRING_DATASOURCE_URL: jdbc:postgresql://${DB_HOST}:5432/employee_db
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
+      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
     ports:
       - "8080:8080"
 
@@ -67,12 +68,12 @@ services:
       - backend
     volumes:
       - frontend:/usr/share/nginx/html:ro
+
   nginx:
     image: nginx:alpine
     container_name: nginx
     ports:
       - "80:80"
-      - "5173:80"
     volumes:
       - ./gateway/nginx.conf:/etc/nginx/nginx.conf
       - frontend:/usr/share/nginx/html:ro
@@ -82,4 +83,3 @@ services:
 
 volumes:
   frontend:
-
