--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -36,7 +36,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         location /ws/ {
-            proxy_pass http://backend/ws/;
+            proxy_pass http://backend;
             proxy_http_version 1.1;
 
             # Required for WebSockets
